Baby Senses: fixes the intra-page link spacing on iPhone.  Issue again was the previous dev's use of inline styles; they're overridden well on desktop by CSS media queries, but not so on iPhone.  So here I replace them (as they're wrong) with a more appropriate margin spacing for the intera-page links.

--- a/Baby Senses/css/layout.responsive.css
+++ b/Baby Senses/css/layout.responsive.css
@@ -29,6 +29,11 @@
     width: 408px;
 }
 
+/* The intra-page links - let them breathe a little, spacing them a little from the main content text.  */
+.entries {
+    margin-top: 20px;
+}
+
 /* Move the footer above the header and body content, so that it doesn't risk occlusion. */
 .footer {
     z-index: 30;
